; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/libfc/extr_fc_fcp.c_fc_fcp_cleanup_cmd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/libfc/extr_fc_fcp.c_fc_fcp_cleanup_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fc_fcp_pkt = type { i32, i32*, %struct.fc_lport* }
%struct.fc_lport = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (i32*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fc_fcp_pkt*, i32)* @fc_fcp_cleanup_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fc_fcp_cleanup_cmd(%struct.fc_fcp_pkt* %0, i32 %1) #0 {
  %3 = alloca %struct.fc_fcp_pkt*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.fc_lport*, align 8
  store %struct.fc_fcp_pkt* %0, %struct.fc_fcp_pkt** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.fc_fcp_pkt*, %struct.fc_fcp_pkt** %3, align 8
  %7 = getelementptr inbounds %struct.fc_fcp_pkt, %struct.fc_fcp_pkt* %6, i32 0, i32 2
  %8 = load %struct.fc_lport*, %struct.fc_lport** %7, align 8
  store %struct.fc_lport* %8, %struct.fc_lport** %5, align 8
  %9 = load %struct.fc_fcp_pkt*, %struct.fc_fcp_pkt** %3, align 8
  %10 = getelementptr inbounds %struct.fc_fcp_pkt, %struct.fc_fcp_pkt* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %24

13:                                               ; preds = %2
  %14 = load %struct.fc_lport*, %struct.fc_lport** %5, align 8
  %15 = getelementptr inbounds %struct.fc_lport, %struct.fc_lport* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32 (i32*)*, i32 (i32*)** %16, align 8
  %18 = load %struct.fc_fcp_pkt*, %struct.fc_fcp_pkt** %3, align 8
  %19 = getelementptr inbounds %struct.fc_fcp_pkt, %struct.fc_fcp_pkt* %18, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = call i32 %17(i32* %20)
  %22 = load %struct.fc_fcp_pkt*, %struct.fc_fcp_pkt** %3, align 8
  %23 = getelementptr inbounds %struct.fc_fcp_pkt, %struct.fc_fcp_pkt* %22, i32 0, i32 1
  store i32* null, i32** %23, align 8
  br label %24

24:                                               ; preds = %13, %2
  %25 = load i32, i32* %4, align 4
  %26 = load %struct.fc_fcp_pkt*, %struct.fc_fcp_pkt** %3, align 8
  %27 = getelementptr inbounds %struct.fc_fcp_pkt, %struct.fc_fcp_pkt* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
